--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <body class="bg-gray-50 dark:bg-gray-900 antialiased">
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
   </body>
 </html>
